apps/grimmory/buffering-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grimmory-buffer
  namespace: grimmory
spec:
  buffering:
    memRequestBodyBytes: 262144
    memResponseBodyBytes: 262144
    maxRequestBodyBytes: 104857600
    maxResponseBodyBytes: 104857600
